--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Mon Oct  4 12:53:21 UTC 2004</p>
+Tue Oct 12 19:27:53 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -32,13 +32,6 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">gnu.java.nio.VMPipe</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMSelector</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.rmic.RMIC</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.rmic.RMIC.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.RMIHashes</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.RMIHashes.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.RMIObjectInputStream</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.RMIObjectInputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnection</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnectionManager</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnectionManager.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastRemoteCall</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastRemoteCall.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServerRef</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.GetDelegateInstanceException</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -48,22 +41,16 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.CharArrayWriter</td> <td class="needsmerge"><a href="compare/java.io.CharArrayWriter.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.DataInputStream</td> <td class="needsmerge"><a href="compare/java.io.DataInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.DataOutputStream</td> <td class="needsmerge"><a href="compare/java.io.DataOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.FileInputStream</td> <td class="needsmerge"><a href="compare/java.io.FileInputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.FileOutputStream</td> <td class="needsmerge"><a href="compare/java.io.FileOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectOutputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.ObjectStreamClass</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamClass.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamField</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.PipedInputStream</td> <td class="needsmerge"><a href="compare/java.io.PipedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.PrintStream</td> <td class="needsmerge"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.io.RandomAccessFile</td> <td class="needsmerge"><a href="compare/java.io.RandomAccessFile.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Class</td> <td class="needsmerge"><a href="compare/java.lang.Class.diff">Diff</a></td> </tr>
@@ -89,6 +76,8 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="merged-expected-diff">java.lang.reflect.Modifier</td> <td class="merged-expected-diff"><a href="compare/java.lang.reflect.Modifier.diff">Expected diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.reflect.Proxy</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Proxy.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.HttpURLConnection</td> <td class="needsmerge"><a href="compare/java.net.HttpURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
@@ -97,15 +86,22 @@ differences are currently required.</p>
 <tr> <td class="merged-expected-diff">java.net.URL</td> <td class="merged-expected-diff"><a href="compare/java.net.URL.diff">Expected diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.nio.ByteBufferHelper</td> <td class="needsmerge"><a href="compare/java.nio.ByteBufferHelper.diff">Diff</a></td> </tr>
 <tr> <td class="merged-unexpected-diff">java.nio.DirectByteBufferImpl</td> <td class="merged-unexpected-diff"><a href="compare/java.nio.DirectByteBufferImpl.diff">Expected diff changed</a></td> </tr>
 <tr> <td class="merged-unexpected-diff">java.nio.MappedByteBufferImpl</td> <td class="merged-unexpected-diff"><a href="compare/java.nio.MappedByteBufferImpl.diff">Expected diff changed</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessControlContext</td> <td class="needsmerge"><a href="compare/java.security.AccessControlContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessController</td> <td class="needsmerge"><a href="compare/java.security.AccessController.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.IdentityScope</td> <td class="needsmerge"><a href="compare/java.security.IdentityScope.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.security.IntersectingDomainCombiner</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.security.Policy</td> <td class="needsmerge"><a href="compare/java.security.Policy.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.security.Security</td> <td class="needsmerge"><a href="compare/java.security.Security.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Timer</td> <td class="needsmerge"><a href="compare/java.util.Timer.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.util.VMTimeZone</td> <td class="VM-specific">VM-specific</td> </tr>
+<tr> <td class="needsmerge">java.util.logging.LogManager</td> <td class="needsmerge"><a href="compare/java.util.logging.LogManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.logging.LogRecord</td> <td class="needsmerge"><a href="compare/java.util.logging.LogRecord.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -121,23 +117,34 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.util.zip.ZipEntry</td> <td class="needsmerge"><a href="compare/java.util.zip.ZipEntry.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOImage</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOParam</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.IIOParamController</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.ImageIO</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.ImageReadParam</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.imageio.ImageReader</td> <td class="needsmerge"><a href="compare/javax.imageio.ImageReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.imageio.ImageTranscoder</td> <td class="needsmerge"><a href="compare/javax.imageio.ImageTranscoder.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.imageio.ImageTypeSpecifier</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.ImageWriteParam</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.imageio.ImageWriter</td> <td class="needsmerge"><a href="compare/javax.imageio.ImageWriter.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">javax.imageio.metadata.IIOInvalidTreeException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.metadata.IIOMetadata</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.metadata.IIOMetadataController</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.metadata.IIOMetadataFormat</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.metadata.IIOMetadataFormatImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.metadata.IIOMetadataNode</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.imageio.spi.IIORegistry</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">javax.imageio.spi.ImageInputStreamSpi</td> <td class="needsmerge"><a href="compare/javax.imageio.spi.ImageInputStreamSpi.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.imageio.spi.ImageOutputStreamSpi</td> <td class="needsmerge"><a href="compare/javax.imageio.spi.ImageOutputStreamSpi.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageReaderSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.imageio.spi.ImageWriterSpi</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">javax.imageio.spi.ServiceRegistry</td> <td class="needsmerge"><a href="compare/javax.imageio.spi.ServiceRegistry.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.imageio.stream.ImageInputStream</td> <td class="needsmerge"><a href="compare/javax.imageio.stream.ImageInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">javax.imageio.stream.ImageInputStreamImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">javax.imageio.stream.ImageOutputStream</td> <td class="needsmerge"><a href="compare/javax.imageio.stream.ImageOutputStream.diff">Diff</a></td> </tr>
+<tr> <td class="classpath-only">javax.imageio.stream.ImageOutputStreamImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">javax.naming.spi.NamingManager</td> <td class="needsmerge"><a href="compare/javax.naming.spi.NamingManager.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">javax.rmi.BAD_OPERATION</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ClassDesc</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
