Bootstrap and test results for 3.4.2:
  hppa2.0w-hp-hpux11.00 (binutils 2.13.1)
  i686-pc-mingw32
  i686-pc-linux-gnu (Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7)
  ia64-unknown-linux-gnu
    (Red Hat AW2.1, binutils 2.14, glibc 2.2.4, kernel 2.4.18)
  sh4-unknown-linux-gnu (binutils 2.15.90, glibc 2.2.5, kernel 2.4.21)
  sparc-sun-solaris2.8 (GNU as and ld 2.13.1)
  x86_64-unknown-linux-gnu
    (Red Hat EL 3, binutils 2.14.90.0.4, glibc 2.3.2, kernel 2.4.21)

Bootstrap for 3.4.2:

  alpha-dec-osf4.0f
  alphaev68-dec-osf5.1
  i386-pc-solaris2.9
  i686-pc-linux-gnu (SuSE Linux 9.1, glibc 2.3.3, kernel 2.6.5)
  powerpc-apple-darwin7.5.0 (Mac OS 10.3.5)

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -25,7 +25,8 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>alpha-dec-osf4.0f</td>
 <td>Tru64</td>
-<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada, with tweak):
+<td>Bootstrap (C, C++, F77, Java, Obj-C, Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00412.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01304.html">3.4.0</a>
 </td>
 </tr>
@@ -75,6 +76,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>alphaev68-dec-osf5.1</td>
 <td>Tru64</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Ada)
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01065.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00812.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-05/msg00136.html">3.4.0</a>
 </td>
@@ -101,9 +103,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>binutils 2.13.1</td>
 <td>Bootstrap (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00926.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00137.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00538.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00051.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01033.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00961.html">3.4.0</a>
@@ -115,6 +119,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00415.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00908.html">3.4.2</a>
 </td>
 </tr>
 
@@ -268,11 +280,31 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, binutils 2.14, glibc 2.2.4, kernel 2.4.7</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00926.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00137.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00535.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00069.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00960.html">3.4.0</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>SUSE Linux 9.1, glibc 2.3.3, kernel 2.6.5</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-10/msg00167.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-mingw32</td>
+<td>Windows XP SP2 Pro, binutils 2.15, mingwrt 3.5, w32api 3.1, libiconv 1.9.1</td>
+<td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00476.html">3.4.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00359.html">3.4.2</a>
 </td>
 </tr>
 
@@ -309,8 +341,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>ia64-unknown-linux-gnu</td>
 <td>Red Hat AW2.1, binutils 2.14, glibc 2.2.4, kernel 2.4.18</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00969.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00137.html">3.4.1</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00642.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00072.html">3.4.1</a>
 </td>
 </tr>
@@ -355,6 +389,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mac OS X 10.3.4</td>
 <td>Bootstrap (C, C++, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00720.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.5.0</td>
+<td>Mac OS 10.3.5</td>
+<td>Bootstrap (C, C++, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00677.html">3.4.2</a>
 </td>
 </tr>
 
@@ -417,6 +459,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sh4-unknown-linux-gnu</td>
+<td>binutils 2.15.90, glibc 2.2.5, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01094.html">3.4.2</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00740.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -453,8 +505,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>GNU as and ld 2.13.1</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00926.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00995.html">3.4.0</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00586.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00978.html">3.4.0</a>
 </td>
 </tr>
@@ -536,9 +590,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>x86_64-unknown-linux-gnu</td>
 <td>Red Hat EL 3, binutils 2.14.90.0.4, glibc 2.3.2, kernel 2.4.21</td>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00969.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00137.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg01028.html">3.4.0</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00636.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00070.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01029.html">3.4.0</a>
 </td>
