--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -104,8 +104,9 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alphaev67-dec-osf5.1</td>
-<td>Tru64 5.1b</td>
+<td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01220.html">3.3.4</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-06/msg01504.html">3.3</a>
 </td>
 </tr>
@@ -233,6 +234,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-02/msg01057.html">3.3.3</a>.
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00522.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00950.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa2.0w-hp-hpux11.11</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01213.html">3.3.4</a>
 </td>
 </tr>
 
@@ -915,6 +924,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>&nbsp;</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2004-04/msg00054.html">3.3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-apple-darwin7.5.0</td>
+<td>&nbsp;</td>
+<td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01214.html">3.3.4</a>
 </td>
 </tr>
 
