--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -856,6 +856,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu</td>
+<td>SUSE 9.0, glibc 2.3.2, kernel 2.4.21</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00578.html">3.2.2</a>
+</td>
+</tr>
+
+<tr>
 <td>i686-pc-sco3.2v5.0.6</td>
 <td>SCO OpenServer v5.0.6</td>
 <td>Successful (C, C++):
