Test results for 3.4.2:
  alphaev68-dec-osf5.1
  hppa-unknown-linux-gnu
  hppa64-hp-hpux11.00
  hppa64-hp-hpux11.11
  i386-unknown-freebsd4.10
  i586-pc-linux-gnu
  i686-pc-linux-gnu
  powerpc-ibm-aix4.3.3.0
  powerpc-unknown-linux-gnu
  s390-ibm-linux-gnu
  s390x-ibm-linux-gnu
  sparc-sun-solaris2.5.1
  sparc-sun-solaris2.6
  sparc-sun-solaris2.7
  sparc-sun-solaris2.8
  sparc-sun-solaris2.9
  sparc-unknown-linux-gnu
  sparc64-sun-solaris2.9
  sparc64-unknown-linux-gnu

--- a/htdocs/gcc-3.4/buildstat.html
+++ b/htdocs/gcc-3.4/buildstat.html
@@ -74,6 +74,14 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alphaev68-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-10/msg00275.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
+<td>alphaev68-dec-osf5.1</td>
 <td>Tru64</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Ada)
 <a href="http://gcc.gnu.org/ml/gcc/2004-09/msg01065.html">3.4.2</a>,
@@ -86,6 +94,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00626.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00534.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00324.html">3.4.1</a>
 </td>
@@ -118,7 +127,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>hppa64-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00627.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00415.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>hppa64-hp-hpux11.11</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg01014.html">3.4.2</a>
 </td>
 </tr>
 
@@ -152,6 +170,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-unknown-freebsd4.10</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00262.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00436.html">3.4.1</a>
 </td>
 </tr>
@@ -183,9 +202,10 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i586-redhat-linux-gnu</td>
+<td>i586-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00284.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01010.html">3.4.0</a>
 </td>
 </tr>
@@ -221,6 +241,20 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00974.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00616.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00570.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00491.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00391.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00354.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00330.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00322.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00310.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00264.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00261.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00248.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00243.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-10/msg00034.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00307.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00251.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00237.html">3.4.1</a>,
@@ -304,7 +338,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Bootstrap (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-09/msg00476.html">3.4.2</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00359.html">3.4.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00359.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00306.html">3.4.2</a>
 </td>
 </tr>
 
@@ -401,6 +436,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg01212.html">3.4.2</a>
+</td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
@@ -420,6 +463,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-10/msg00080.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00534.html">3.4.1</a>
 </td>
 </tr>
@@ -445,6 +489,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>s390-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00824.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00689.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01034.html">3.4.0</a>
 </td>
@@ -454,6 +499,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>s390x-ibm-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00825.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01035.html">3.4.0</a>
 </td>
 </tr>
@@ -472,6 +518,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00403.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00980.html">3.4.0</a>
 </td>
 </tr>
@@ -480,6 +527,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.6</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00404.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00982.html">3.4.0</a>
 </td>
 </tr>
@@ -488,6 +536,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00405.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00981.html">3.4.0</a>
 </td>
 </tr>
@@ -496,6 +545,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00405.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00258.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00983.html">3.4.0</a>
 </td>
@@ -517,6 +567,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00296.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00567.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00218.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01240.html">3.4.0</a>
@@ -527,6 +578,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc64-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00406.html">3.4.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00349.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg01095.html">3.4.0</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-04/msg00984.html">3.4.0</a>
 </td>
@@ -544,6 +597,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00290.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00345.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00632.html">3.4.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00250.html">3.4.1</a>
@@ -564,6 +618,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00297.html">3.4.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2004-07/msg00786.html">3.4.1</a>
 </td>
 </tr>
@@ -583,6 +638,14 @@ Installing GCC: Final Installation</a>.</p>
 <td>binutils 2.15</td>
 <td>Bootstrap (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2004-07/msg00425.html">3.4.1</a>
+</td>
+</tr>
+
+<tr>
+<td>x86_64-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2004-09/msg00309.html">3.4.2</a>
 </td>
 </tr>
 
