--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Tue Oct 12 19:28:27 UTC 2004</p>
+Sat Oct 16 12:57:13 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -15,6 +15,14 @@ differences are currently required.</p>
 
 <table width="100%" border="1" cellspacing="0" cellpadding="1">
 <tr><th align="left">Class</th> <th>Merge Status</th> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.BitwiseXORComposite</td> <td class="needsmerge"><a href="compare/gnu.java.awt.BitwiseXORComposite.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.ClasspathToolkit</td> <td class="needsmerge"><a href="compare/gnu.java.awt.ClasspathToolkit.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.image.XBMDecoder</td> <td class="needsmerge"><a href="compare/gnu.java.awt.image.XBMDecoder.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.GLightweightPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.GLightweightPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GdkGlyphVector</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GdkGlyphVector.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkButtonPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkButtonPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkComponentPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkComponentPeer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.awt.peer.gtk.GtkLabelPeer</td> <td class="needsmerge"><a href="compare/gnu.java.awt.peer.gtk.GtkLabelPeer.diff">Diff</a></td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Button</td> <td class="needsmerge"><a href="compare/java.awt.Button.diff">Diff</a></td> </tr>
@@ -24,11 +32,23 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.Scrollbar</td> <td class="needsmerge"><a href="compare/java.awt.Scrollbar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.TextArea</td> <td class="needsmerge"><a href="compare/java.awt.TextArea.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ByteLookupTable</td> <td class="needsmerge"><a href="compare/java.awt.image.ByteLookupTable.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferByte</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferByte.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferDouble</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferDouble.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferFloat</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferFloat.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferInt</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferInt.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferShort.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.DataBufferUShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferUShort.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ShortLookupTable</td> <td class="needsmerge"><a href="compare/java.awt.image.ShortLookupTable.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JDialog</td> <td class="needsmerge"><a href="compare/javax.swing.JDialog.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicToolBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicToolBarUI.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkButtonPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkButtonPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkComponentPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkLabelPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkLabelPeer.c.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GtkWindowPeer.c.diff">Diff</a></td> </tr>
 </table>
 </body>
 </html>
