Mention that reverting patches is preapproved

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -143,6 +143,9 @@ and similar stuff.  Just check in the fix and copy it to
 <code>gcc-patches</code>.  We don't want to get overly anal-retentive
 about checkin policies.</p>
 
+<p>Similarly, no outside approval is needed to revert a patch that you
+checked in.</p>
+
 <p><a href="codingconventions.html#upstream">Importing files maintained
 outside the tree from their official versions</a>.</p>
 
